# cookbook

./: readme.txt
cpp/cmake_examples/cmake_example1/: readme.txt
cpp/cmake_examples/cmake_example1/src/: CMakeLists.txt  main.cpp
cpp/cmake_examples/cmake_example2/: readme.txt
cpp/cmake_examples/cmake_example2/src/: CMakeLists.txt  main.cpp
cpp/cmake_examples/cmake_example3/: readme.txt
cpp/cmake_examples/cmake_example3/src/: CMakeLists.txt  lib.h
cpp/cmake_examples/cmake_example4/: readme.txt
cpp/cmake_examples/cmake_example4/src/: CMakeLists.txt  lib.cpp  main.cpp  main.h
cpp/cmake_examples/cmake_example5/: readme.txt
cpp/cmake_examples/cmake_example5/src/: CMakeLists.txt  lib.cpp  lib.h  test1.cpp  test2.cpp
java/cargodeploy/: pom.xml  readme.txt
java/cargodeploy/src/main/java/hu/dfighter1985/cargodeploy/controller/: CargoDeployController.java
java/cargodeploy/src/main/webapp/WEB-INF/: dispatcher-servlet.xml  web.xml
java/extractversion/: extract_revision.sh  pom.xml  readme.txt
java/extractversion/src/main/java/hu/dfighter1985/extractversion/: ExtractVersion.java  Version.java
java/hellomaven/: pom.xml  readme.txt
java/hellomaven/src/main/java/hu/dfighter1985/hellomaven/: HelloMaven.java
java/jettyspring/: pom.xml  readme.txt
java/jettyspring/src/main/java/hu/dfighter1985/jettyspring/restapi/: JettySpringController.java
java/jettyspring/src/main/webapp/WEB-INF/: dispatcher-servlet.xml  web.xml
java/springmvc_bootstrap/PatronEmail/: pom.xml  readme.txt
java/springmvc_bootstrap/PatronEmail/src/main/java/hu/dfighter1985/patronemail/controller/: PatronController.java
java/springmvc_bootstrap/PatronEmail/src/main/java/hu/dfighter1985/patronemail/directory/: PatronDirectory.java
java/springmvc_bootstrap/PatronEmail/src/main/java/hu/dfighter1985/patronemail/model/: EditPatron.java  Patron.java  SearchPatron.java
java/springmvc_bootstrap/PatronEmail/src/main/resources/: log4j.xml
java/springmvc_bootstrap/PatronEmail/src/main/webapp/WEB-INF/: dispatcher-servlet.xml  web.xml
java/springmvc_bootstrap/PatronEmail/src/main/webapp/WEB-INF/spring-config/: applicationContext.xml  spring-security.xml
java/springmvc_bootstrap/PatronEmail/src/main/webapp/WEB-INF/views/: editPatron.jsp  editPatronError.jsp  index.jsp  login.jsp  searchPatron.jsp  searchPatronError.jsp
